# dbt-native-artifacts-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dbt_native_artifacts_parser/: __init__.py
tests/: conftest.py  test_catalog.py  test_manifest.py  test_results.py  test_sources.py
